# tucuxi-cdss-core

./: .clang-tidy  .flake8  .gitignore  .gitmodules  AUTHORS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE.txt  NOTICE.txt  README.md  codemeta.json  config.xml  setup.bat  setup.sh
.github/workflows/: ci.yml
cmake/: build_template.cmake  clean_templates.cmake  templates.cmake
docs/: requirements.txt
docs/_ext/: glossary_abbr_postprocess.py
docs/source/: bibliography.rst  conf.py  glossary.rst  index.rst  references.bib
docs/source/01_introduction/: introduction.rst
docs/source/02_overview/: overview.rst
docs/source/03_architecture/: architecture.rst
docs/source/04_installation/: installation.rst
docs/source/05_configuration/: configuration.rst
docs/source/06_user_guide/: integration_workflow.rst  limitations.rst  purpose_and_scope.rst  run_script.rst  running_tucucdsscli.rst  troubleshooting.rst  understanding_output.rst  user_guide.rst
docs/source/07_data/: cdss_build_template.rst  cdss_build_template_dom_contract.rst  cdss_build_template_graphs_internals.rst  cdss_build_template_json_contract.rst  cdss_build_template_start_here.rst  cdss_html_response_description.rst  cdss_query_description.rst  cdss_response_description.rst  data.rst  query_dosage_description.rst
docs/source/08_srs/: srs.rst  srs_functional_requirements.rst  srs_interface_requirements.rst  srs_introduction.rst  srs_overall_description.rst  srs_reliability_requirements.rst  srs_safety_requirements.rst  srs_verification.rst
docs/source/09_sds/: sds.rst  sds_architecture.rst  sds_detailed_design.rst  sds_interface_design.rst  sds_introduction.rst  sds_safety_design.rst  sds_traceability.rst
docs/source/10_vvp/: vvp.rst  vvp_integration_testing.rst  vvp_introduction.rst  vvp_overview.rst  vvp_system_testing.rst  vvp_tools_environment.rst  vvp_traceability.rst  vvp_unit_testing.rst
docs/source/11_testing/: cdss_tests.rst  testing.rst
docs/source/_static/: style.css
html_template/hospital/: index.html
html_template/hospital/assets/: decrease_logo.txt  dosage.txt  warning_logo.txt
html_template/hospital/css/: style.css
html_template/template/: index.html
html_template/things/: index.html
language/: en.xml  fr.xml  translations_file.xsd
libs/: setup.bat  setup.sh
scripts/: run
scripts/commands/: cb_driver.sh  clean.sh  coverage.sh  format.sh  fuzz.sh  gtest.sh  imatinib.sh  python_deps.sh  tidy.sh
scripts/common/: cmake.sh  common.sh  python.sh
scripts/hooks/: commit-msg  pre-commit
scripts/linux/: run
scripts/win/: run.ps1
src/: tucucdss-cli.cpp
src/tucucdss-core/: CMakeLists.txt  computer.cpp  computer.h  tucucdss-core.pri
src/tucucdss-core/exporter/: abstracthtmlexport.h  abstractxpertrequestresultexport.h  xpertrequestresulthtmlexport.cpp  xpertrequestresulthtmlexport.h  xpertrequestresultpdfexport.cpp  xpertrequestresultpdfexport.h  xpertrequestresultxmlexport.cpp  xpertrequestresultxmlexport.h
src/tucucdss-core/exporter/static/: filestring.cpp  filestring.h
src/tucucdss-core/flow/abstract/: abstractxpertflowstep.h  abstractxpertflowstepprovider.h
src/tucucdss-core/flow/general/: adjustmenttraitcreator.cpp  adjustmenttraitcreator.h  covariatechecker.cpp  covariatechecker.h  covariatevalidatorandmodelselector.cpp  covariatevalidatorandmodelselector.h  datevalidator.cpp  datevalidator.h  dosevalidator.cpp  dosevalidator.h  generalxpertflowstepprovider.cpp  generalxpertflowstepprovider.h  justificationcreator.cpp  justificationcreator.h  padcollector.cpp  padcollector.h  reportprinter.cpp  reportprinter.h  requestexecutor.cpp  requestexecutor.h  samplevalidator.cpp  samplevalidator.h  targetvalidator.cpp  targetvalidator.h  timeafterdoseexporter.cpp  timeafterdoseexporter.h
src/tucucdss-core/language/: languageexception.cpp  languageexception.h  languagemanager.cpp  languagemanager.h
src/tucucdss-core/query/: admindata.cpp  admindata.h  configimport.cpp  configimport.h  configuration.cpp  configuration.h  justification.cpp  justification.h  xpertquerydata.cpp  xpertquerydata.h  xpertqueryimport.cpp  xpertqueryimport.h  xpertquerytocoreextractor.cpp  xpertquerytocoreextractor.h  xpertrequestdata.cpp  xpertrequestdata.h
src/tucucdss-core/result/: abstractvalidationresult.h  covariatevalidationresult.cpp  covariatevalidationresult.h  dosedatevalidationresult.cpp  dosedatevalidationresult.h  dosevalidationresult.cpp  dosevalidationresult.h  sampledatevalidationresult.cpp  sampledatevalidationresult.h  samplevalidationresult.cpp  samplevalidationresult.h  xpertqueryresult.cpp  xpertqueryresult.h  xpertrequestresult.cpp  xpertrequestresult.h
src/tucucdss-core/utils/: xpertutils.cpp  xpertutils.h
test/covariate_boundaries_driver/: README.md  cb_driver.py  imatinib_template.tqf  pyproject.toml  rifampicin_template.tqf
test/drugfiles/: ch.tucuxi.rifampicin.svensson2017.tdd  ch.tucuxi.vancomycin.colin2019.tdd  ch.tucuxi.vancomycin.dao2019.tdd  ch.tucuxi.vancomycin.goti2018.tdd
test/fuzzing/: cell_modifiers.py  config.xml  imatinib.tqf  main.py
test/gtest/: CMakeLists.txt  main.cpp
test/gtest/include/: testutils.h
test/gtest/src/: gtest_adjustmenttraitcreator.cpp  gtest_configimport.cpp  gtest_covariatechecker.cpp  gtest_covariatevalidatorandmodelselector.cpp  gtest_datevalidator.cpp  gtest_dosevalidator.cpp  gtest_justificationcreator.cpp  gtest_languagemanager.cpp  gtest_padcollector.cpp  gtest_reportprinter.cpp  gtest_requestexecutor.cpp  gtest_samplevalidationresult.cpp  gtest_samplevalidator.cpp  gtest_targetvalidator.cpp  gtest_timeafterdoseexporter.cpp  gtest_xpertqueryimport.cpp  gtest_xpertqueryresult.cpp  gtest_xpertqueryresultcreation.cpp  gtest_xpertquerytocoreextractor.cpp  gtest_xpertrequestresulthtmlexport.cpp  gtest_xpertutils.cpp  testutils.cpp
xml/query/: 1_ch.tucuxi.imatinib.gotta2012.2.tqf  2_ch.tucuxi.imatinib.gotta2012.2.tqf  3_ch.tucuxi.rifampicin.svensson2017.1.tqf  4_ch.tucuxi.rifampicin.svensson2017.1.tqf  tucucdss_computing_query.xsd
xml/response/: tucucdss_computing_response.xsd
(+104 files in other folders)
